# bind9-rest

./: .dockerignore  .env.dist  .gitignore  Dockerfile  Makefile  README.md  docker-compose.example.yml  pyproject.toml
app/: __main__.py  const.py
app/controllers/dns/: __init__.py  base.py  create.py  delete.py  get.py  update.py
app/enums/: record_type.py
app/factory/: app.py  config.py
app/models/: dto.py  responses.py
app/models/config/env/: __init__.py  app.py  dns.py  server.py
app/web/: depends.py
app/web/routes/: create.py  delete.py  get.py  update.py
nginx/: caller.example.conf
scripts/: docker-entrypoint.sh
systemd/: bind9-rest.service
