[project]
name = "bind9-rest"
version = "1.0"
description = "REST API for DNS management"
authors = ["wakaree <nullmatawasoradesu@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic~=2.9.0",
    "pydantic-settings~=2.6.0",
    "fastapi~=0.115.2",
    "uvicorn~=0.32.0",
    "dnspython>=2.7.0",
]

[tool.uv]
dev-dependencies = [
    "mypy~=1.12.0",
    "black~=24.10.0",
    "ruff~=0.7.0",
]

[tool.black]
line-length = 99
exclude = "\\.?venv|\\.?tests"

[tool.ruff]
target-version = "py38"
line-length = 99
exclude = [
    ".venv",
    ".idea",
    ".tests",
]

[tool.ruff.lint]
select = [
    "C",
    "DTZ",
    "E",
    "F",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "Q",
    "T",
    "W",
    "YTT",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = [
    "venv",
    ".venv",
    ".idea",
    ".tests",
]
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true
